# pdfium-light

./: BUILD.gn  CONTRIBUTING.md  DEPS  PRESUBMIT.py  PRESUBMIT_test.py  README.md  navbar.md  pdfium.gni  unsafe_buffers_paths.txt
build_overrides/: pdfium.gni
core/: README.md
core/fpdfapi/edit/: cpdf_creator_embeddertest.cpp
core/fpdfapi/page/: BUILD.gn  DEPS  cpdf_devicecs.cpp  cpdf_expintfunc.h  cpdf_function.cpp  cpdf_function.h  cpdf_pageimagecache.cpp  cpdf_pageobject.cpp  cpdf_pageobjectholder.cpp  cpdf_sampledfunc.cpp  cpdf_sampledfunc.h  cpdf_transferfuncdib.cpp
core/fpdfapi/parser/: BUILD.gn  cpdf_array.cpp  cpdf_array.h  cpdf_array_unittest.cpp  cpdf_boolean.cpp  cpdf_boolean.h  cpdf_boolean_unittest.cpp  cpdf_cross_ref_table.cpp  cpdf_cross_ref_table.h  cpdf_dictionary.cpp  cpdf_dictionary.h  cpdf_dictionary_unittest.cpp  cpdf_document.cpp  cpdf_document.h  cpdf_document_unittest.cpp  cpdf_indirect_object_holder.cpp  cpdf_indirect_object_holder.h  cpdf_indirect_object_holder_unittest.cpp  cpdf_name.cpp  cpdf_name.h  cpdf_name_unittest.cpp  cpdf_number.cpp  cpdf_number.h  cpdf_number_unittest.cpp  cpdf_parser.cpp  cpdf_parser.h  cpdf_parser_unittest.cpp  cpdf_read_validator.cpp  cpdf_read_validator.h  cpdf_reference.cpp  cpdf_reference.h  cpdf_reference_unittest.cpp  cpdf_security_handler_embeddertest.cpp  cpdf_simple_parser.cpp  cpdf_stream.cpp  cpdf_stream.h  cpdf_stream_unittest.cpp  cpdf_string.cpp  cpdf_string.h  cpdf_string_unittest.cpp  (+4 more)
core/fpdfapi/parser/rust/: BUILD.gn  pdfium_rust_parser.rs  rust_parser_adapter.cpp  rust_parser_adapter.h
core/fpdfapi/render/: BUILD.gn  cpdf_imagerenderer.cpp  cpdf_pagerendercontext.cpp  cpdf_pagerendercontext.h  cpdf_rendercontext.cpp  cpdf_rendercontext.h  cpdf_rendershading.cpp  cpdf_renderstatus.cpp  cpdf_scaledrenderbuffer.cpp  (+1 more)
core/fpdfapi/render/rust/: BUILD.gn  pdfium_rust_render.rs  rust_render_adapter.cpp  rust_render_adapter.h
core/fpdfdoc/: cpdf_dest.cpp  cpdf_formfield.h  cpdf_linklist.cpp  cpdf_nametree.cpp  cpdf_nametree_unittest.cpp  cpdf_numbertree.cpp  cpdf_pagelabel.cpp  cpdf_pagelabel_unittest.cpp
core/fpdftext/: BUILD.gn  cpdf_linkextract.cpp  cpdf_linkextract.h  cpdf_textpage.cpp  cpdf_textpage.h  cpdf_textpagefind.cpp  cpdf_textpagefind.h
core/fpdftext/rust/: BUILD.gn  pdfium_rust_text.rs  rust_text_adapter.cpp  rust_text_adapter.h
core/fxcodec/: BUILD.gn  fx_codec.cpp  fx_codec.h  fx_codec_def.h
core/fxcodec/basic/: basicmodule.cpp  basicmodule.h  rust_codec_parity_unittest.cpp
core/fxcodec/fax/: fax_parity_unittest.cpp  faxmodule.cpp  faxmodule.h
core/fxcodec/flate/: flatemodule.cpp  flatemodule.h  lzw_parity_unittest.cpp  predictor_parity_unittest.cpp
core/fxcodec/jpeg/: jpegmodule.cpp
core/fxcodec/rust/: BUILD.gn  pdfium_rust_codecs.rs  rust_codec_adapter.cpp  rust_codec_adapter.h
core/fxcrt/: BUILD.gn  bytestring_pool.cpp  bytestring_pool.h  fx_unicode.cpp  fx_unicode.h
core/fxcrt/rust/: BUILD.gn  pdfium_rust_fxcrt.rs  rust_fxcrt_adapter.cpp  rust_fxcrt_adapter.h
core/fxge/: BUILD.gn  DEPS  cfx_charmap_resolver.cpp  cfx_charmap_resolver.h  cfx_face.cpp  cfx_face.h  cfx_font.cpp  cfx_font.h  cfx_fontmapper.cpp  cfx_fontmapper.h  cfx_fontmapper_unittest.cpp  cfx_fontmgr.cpp  cfx_fontmgr.h  cfx_gemodule.cpp  cfx_gemodule.h  cfx_glyphcache.cpp  cfx_renderdevice.cpp  cfx_renderdevice.h  cfx_substfont.cpp  cfx_substfont.h  fx_font.cpp  renderdevicedriver_iface.cpp  renderdevicedriver_iface.h  text_glyph_pos.cpp
core/fxge/agg/rust/: BUILD.gn  pdfium_rust_agg.rs  rust_agg_adapter.cpp  rust_agg_adapter.h
core/fxge/dib/rust/: BUILD.gn  pdfium_rust_cmyk_table.rs  pdfium_rust_dib.rs  rust_blend_adapter.cpp  rust_blend_adapter.h
docs/: code-coverage.md  getting-started.md  light-api-boundary.md  platform-support.md  removal-audit-log.md  rust-port.md  size-measurements.md  validation.md
docs/adr/: 0001-define-pdfium-light-scope.md  0002-use-agg-and-freetype-for-the-current-static-stack.md
fpdfsdk/: BUILD.gn  DEPS  cpdfsdk_helpers.cpp  cpdfsdk_helpers.h  cpdfsdk_helpers_unittest.cpp  cpdfsdk_renderpage.cpp  cpdfsdk_renderpage.h  fpdf_annot.cpp  fpdf_attachment_embeddertest.cpp  fpdf_dataavail.cpp  fpdf_doc.cpp  fpdf_doc_embeddertest.cpp  fpdf_edit_embeddertest.cpp  fpdf_editimg.cpp  fpdf_editpage.cpp  fpdf_editpage_embeddertest.cpp  fpdf_flatten_embeddertest.cpp  fpdf_ppo_embeddertest.cpp  fpdf_save.cpp  fpdf_save_embeddertest.cpp  fpdf_searchex_embeddertest.cpp  fpdf_sysfontinfo.cpp  fpdf_text_embeddertest.cpp  fpdf_view.cpp  fpdf_view_c_api_test.c  fpdf_view_embeddertest.cpp  rust_codec_embeddertest.cpp  rust_renderer_parity_embeddertest.cpp
fpdfsdk/rust/: BUILD.gn  render_plan_adapter.cpp  render_plan_adapter.h
fxjs/: BUILD.gn  README  ijs_runtime.cpp  ijs_runtime.h
public/: fpdf_annot.h  fpdf_dataavail.h  fpdf_doc.h  fpdf_edit.h  fpdfview.h
public/cpp/: fpdf_deleters.h  fpdf_scopers.h
samples/: simple_no_v8.c
testing/: BUILD.gn  DEPS  SUPPRESSIONS  SUPPRESSIONS_EXACT_MATCHING  SUPPRESSIONS_IMAGE_DIFF  command_line_helpers.cpp  command_line_helpers.h  embedder_test.cpp  embedder_test.h  embedder_test_environment.cpp  embedder_test_environment.h  embedder_test_main.cpp  light_api_headers_test.cc  pdfium_test.cc  unit_test_main.cpp
testing/fuzzers/: BUILD.gn  pdf_codec_fax_fuzzer.cc  pdf_fuzzer_init.cc  pdf_fuzzer_init_public.cc  pdf_fuzzer_init_public.h  pdf_parser_fuzzer.cc  pdf_parser_fuzzer_corpus.cc
testing/image_diff/: BUILD.gn  image_diff_png_libpng.cpp
testing/resources/: duplicate_text_characters.in  duplicate_text_objects.in  out_of_order_text_objects.in  rust_ascii_hex_filter.in  rust_codec_filters.in  rust_codec_filters.stream  rust_lzw_filter.in  rust_parser_corpus.inc  rust_png_predictor_filter.in  rust_renderer_corpus.inc  zugferd_facturx_attachment.in  zugferd_facturx_attachment.xml
testing/tools/: BUILD.gn  common.py  generate_rust_cmyk_table.py  pngdiffer.py  rust_port_metrics.py  rust_port_metrics_test.py  test_runner.py  validate_light.py
testing/tools/coverage/: coverage_report.py
testing/utils/: png_encode.cpp
(+33 files in other folders)
