# Copyright 2015 The PDFium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/pdfium.gni")

# This file contains PDFium-related build flags.

declare_args() {
  # Build PDFium either:
  # 1) When set to true, with a bundled FreeType, built from FreeType source
  #    code in //third_party/freetype and PDFium's FreeType configs in
  #    third_party/freetype/include.
  # 2) When set to false, use whatever FreeType target is defined in
  #    //build/config/freetype.
  pdf_bundle_freetype = pdf_bundle_freetype_override

  # Build PDFium with experimental Brotli compression support.
  pdf_enable_brotli = pdf_enable_brotli_override

  # Generate logging messages for click events that reach PDFium
  pdf_enable_click_logging = false

  # Build the reduced pdfium-light public API. The legacy implementation stays
  # available internally only until its dedicated removal work lands.
  pdf_enable_light = true

  # Retained only to reject legacy V8-enabled configurations clearly.
  pdf_enable_v8 = pdf_enable_v8_override

  # Retained only to reject legacy XFA-enabled configurations clearly.
  pdf_enable_xfa = pdf_enable_xfa_override

  # Build PDFium against PartitionAlloc. When false, PDFium must build without
  # requiring any PartitionAlloc headers or code to be present. When true,
  # PDFium will use PartitionAlloc partitions to separate strings, scalars,
  # etc. from other allocations. However, the use of PartitionAlloc for new or
  # malloc is controlled by args in build_overrides/partition_alloc.gni.
  pdf_use_partition_alloc = pdf_use_partition_alloc_override

  # AGG and FreeType are the sole current rendering stack. Their eventual Rust
  # replacements are decided at the corresponding module-porting stage.
  pdf_use_agg = true

  # Build PDFium standalone. Now only controls whether the test binaries
  # are built. Most logic is conditioned by build_with_chromium.
  pdf_is_standalone = false

  # Build a complete static library
  pdf_is_complete_lib = false

  # Enable callgrind for performance profiling
  enable_callgrind = false

  # Don't build against bundled lcms2.
  use_system_lcms2 = false

  # Don't build against bundled libopenjpeg2.
  use_system_libopenjpeg2 = false

  # Don't build against bundled libpng.
  use_system_libpng = false

  # Don't build against bundled zlib.
  use_system_zlib = false
}

assert(!pdf_is_complete_lib || !is_component_build,
       "pdf_is_complete_lib=true requires is_component_build=false")

assert(!pdf_enable_v8,
       "pdfium-light has removed V8 and JavaScript execution support")

assert(!pdf_enable_xfa, "pdfium-light has removed the XFA runtime")
