# Copyright 2016 The PDFium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file contains PDFium-related build overrides.

# Build PDFium either using a bundled FreeType library, or using the FreeType
# target defined in //build/config/freetype.
# Default: Use a bundled FreeType.
pdf_bundle_freetype_override = true

# Build PDFium with experimental Brotli compression support.
# Default: Brotli support is disabled until PDF 2.0 spec is confirmed.
pdf_enable_brotli_override = false

# V8 is outside the pdfium-light static-document scope. This legacy override
# remains only so the public build arg fails with a clear assertion if enabled.
pdf_enable_v8_override = false

# XFA is outside the pdfium-light static-document scope. This legacy override
# remains only so the public build arg fails with a clear assertion if enabled.
pdf_enable_xfa_override = false

# Build PDFium with PartitionAlloc support, directing `fxcrt` to use
# it as its memory allocator in lieu of `malloc()`.
# Default: Use PartitionAlloc when building with Clang.
pdf_use_partition_alloc_override = is_clang
