# Copyright 2026 Sebastian Werner
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rust_static_library.gni")

assert(enable_rust,
       "fpdfsdk/rust requires enable_rust=true; see docs/rust-port.md")

rust_static_library("pdfium_rust_render_plan") {
  crate_name = "pdfium_rust_render_plan"
  crate_root = "pdfium_rust_render_plan.rs"
  edition = "2021"
  allow_unsafe = true
  build_native_rust_unit_tests = true
  sources = [ "pdfium_rust_render_plan.rs" ]
}

source_set("render_plan_adapter") {
  sources = [
    "render_plan_adapter.cpp",
    "render_plan_adapter.h",
  ]
  configs += [ "../../:pdfium_strict_config" ]
  deps = [ ":pdfium_rust_render_plan" ]
  visibility = [ "../../*" ]
}
