# Copyright 2026 Sebastian Werner
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rust_static_library.gni")

assert(enable_rust,
       "core/fpdftext/rust requires enable_rust=true; see docs/rust-port.md")

rust_static_library("pdfium_rust_text") {
  crate_name = "pdfium_rust_text"
  crate_root = "pdfium_rust_text.rs"
  edition = "2021"
  allow_unsafe = true
  build_native_rust_unit_tests = true
  sources = [ "pdfium_rust_text.rs" ]
}

source_set("rust_text_adapter") {
  sources = [
    "rust_text_adapter.cpp",
    "rust_text_adapter.h",
  ]
  configs += [ "../../../:pdfium_strict_config" ]
  deps = [ ":pdfium_rust_text" ]
  visibility = [ "../../../*" ]
}
