# Copyright 2026 Sebastian Werner
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rust_static_library.gni")

rust_static_library("pdfium_rust_codecs") {
  crate_name = "pdfium_rust_codecs"
  crate_root = "pdfium_rust_codecs.rs"
  edition = "2021"
  allow_unsafe = true
  build_native_rust_unit_tests = true
  sources = [ "pdfium_rust_codecs.rs" ]
}

source_set("rust_codec_adapter") {
  sources = [
    "rust_codec_adapter.cpp",
    "rust_codec_adapter.h",
  ]
  configs += [ "../../../:pdfium_strict_config" ]
  deps = [ ":pdfium_rust_codecs" ]
  visibility = [ "../../../*" ]
}
