# Copyright 2026 Sebastian Werner
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/rust/rust_static_library.gni")

assert(enable_rust,
       "core/fxcrt/rust requires enable_rust=true; see docs/rust-port.md")

rust_static_library("pdfium_rust_fxcrt") {
  crate_name = "pdfium_rust_fxcrt"
  crate_root = "pdfium_rust_fxcrt.rs"
  edition = "2021"
  allow_unsafe = true
  build_native_rust_unit_tests = true
  sources = [ "pdfium_rust_fxcrt.rs" ]
}

source_set("rust_fxcrt_adapter") {
  sources = [
    "rust_fxcrt_adapter.cpp",
    "rust_fxcrt_adapter.h",
  ]
  configs += [ "../../../:pdfium_strict_config" ]
  deps = [ ":pdfium_rust_fxcrt" ]
  visibility = [ "../../../*" ]
}
